tab spacing issue fixed for ios

--- a/components/player-stats/player-stats.component.less
+++ b/components/player-stats/player-stats.component.less
@@ -6,6 +6,9 @@
   }
 }
 .stats {
+  .nav-tabs li{
+    margin:0px;
+  }
   .nav-tabs li span{
     position:relative;
   }
